objects/LoggingEvent__e.object
<CustomObject>
    <description>This is used to emit logging events and depreciates the EventLog event.</description>
    <fields>
        <fullName>Format__c</fullName>
        <defaultValue>&quot;RAW&quot;</defaultValue>
        <description>The Format of the message. RAW, CSV, JSON, XML</description>
        <label>Format</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Message__c</fullName>
        <description>The full message for the event goes here.</description>
        <label>Full Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <defaultValue>&quot;INFO&quot;</defaultValue>
        <description>How Important is the Message? INFO, WARNING, ERROR, CRITICAL</description>
        <label>Log Level</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <defaultValue>&quot;apex&quot;</defaultValue>
        <description>The Record type for the event. The record type needs to correspond to a record type in the Log__c object.</description>
        <label>RecordType</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The source of event.</description>
        <label>Source</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <defaultValue>$User.Id</defaultValue>
        <description>The Id of the user who kicked of this event.</description>
        <label>UserId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LoggingEvent</label>
    <pluralLabel>LoggingEvents</pluralLabel>
</CustomObject>